* Bobby
* Bounce!
* Call of Duty - Added Steam Registry path
* Call of Duty 2 - Added Steam Registry path
* Call of Duty 4: Modern Warfare - Added Steam Registry path
* Call of Duty: Modern Warfare 3 - Added Steam Registry paths
* Call of Duty: United Offensive - Added Steam Registry path
* Ceville - Added Settings type
* Cities in Motion - Added Maps Type
* Counter-Strike
* Counter-Strike: Condition Zero - Added Norwegian region
* Counter-Strike: Condition Zero: Deleted Scenes - Added Norwegian region
* Counter-Strike: Global Offensive - Settings Only
* Counter-Strike: Source - Updated files to save and added Beta Release
* CSI: Hard Evidence - Added Steam Registry path
* Criminal Minds
* Day of Defeat - Added Steam Registry path and updated the files to back up
* Day of Defeat: Source - Updated files to save
* Deadly Association
* Dreamfall: The Longest Journey - Added Steam Registry path
* Drift City
* The Elder Scrolls 3: Morrowind - Added Steam Registry path and Settings type
* FishTycoon - Added Steam Registry path
* Garry's Mod - Added new Settings type and Steam Registry path and Added Beta Release
* Gish - Added Steam Registry path and Settings type
* GM Rally - Removed backup of unnecessary settings type files and added a steam registry location
* Grand Theft Auto 2 - Added Registry paths
* GTI Racing - Removed backup of unnecessary settings type files and added a registry location
* Hacker Evolution Duality - Added Steam Registry path and new files to backup
* Half-Life - Added Norwegian region
* Half-Life 2 - Added Steam Registry path
* Half-Life 2: Deathmatch
* Half-Life 2: Lost Coast - Added Settings type and Added Steam registry path
* Half-Life: Blue Shift - Added Norwegian region
* Half-Life: OpposingForce - Added Norwegian region
* Jack Keane - Added settings type
* Lugaru HD - Fixed the files to back up (Files in xml does not exist)
* Machinarium - Added new flashshared path
* Osmos - Added new types